# Captain-Markov

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hirtoique_debut.json  observations.json  observations_plante.json  print.r  to-pdf.sh
src/: .Game.cpp.kate-swp  .Game.h.kate-swp  CaptainFoundPlayer.cpp  CaptainFoundPlayer.h  CollisionHandler.cpp  CollisionHandler.h  Game.cpp  Game.h  ListeNode.cpp  ListeNode.h  Map.cpp  Map.h  Node.cpp  Node.h  NodeFinding.cpp  NodeFinding.h  Pathfinding.cpp  Pathfinding.h  Position.cpp  Position.h  SaveMatrix.cpp  SaveMatrix.h  Tile.cpp  Tile.h  TileType.cpp  TileType.h  Turn.cpp  Turn.h  VectorOfTurn.cpp  VectorOfTurn.h  algo.cpp  algo.h  alpha.cpp  alpha.h  appendmatrixprovider.cpp  appendmatrixprovider.h  beta.cpp  beta.h  bw.cpp  bw.h  (+48 more)
src/Entity/: Computer.cpp  Computer.h  Entity.cpp  Entity.h  Player.cpp  Player.h
